card problem fixed, no longer appearing behind narbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,7 +321,7 @@ footer {
   #cardContainer {
     position: fixed;
     overflow-y: scroll;
-    top: 150px;
+    top: 210px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -329,7 +329,7 @@ footer {
   }
   @media only screen and (max-width: 600px) {
     #cardContainer {
-      top: 150px;
+      top: 175px;
     }
   }
   
